Conceitos básicos do ML

--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -2702,7 +2702,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "asd"
+   ]
   }
  ],
  "metadata": {
